--- a/images/coverage-go112/Makefile
+++ b/images/coverage-go112/Makefile
@@ -12,24 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM golang:1.13
-LABEL maintainer "Stephen Lu <syzf@google.com>"
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates \
-    git
-
-ENV TEMP_REPO_DIR /go/src/knative.dev/test-infra
-ENV TOOL_NAME coverage
-
-# Temporarily add test-infra to the image to build custom tools
-ADD . $TEMP_REPO_DIR
-
-# Build tool in the container
-RUN make -C $TEMP_REPO_DIR/tools/$TOOL_NAME/
-RUN cp $TEMP_REPO_DIR/tools/$TOOL_NAME/$TOOL_NAME /$TOOL_NAME
-
-# Remove test-infra from the container
-RUN rm -fr $TEMP_REPO_DIR
-
-ENTRYPOINT ["/coverage"]
+IMAGE_NAME ?= coverage-go112
+include ../../shared/Makefile.simple-image
