--- a/ci/prow/templates/testgrid_config_header.yaml
+++ b/ci/prow/templates/testgrid_config_header.yaml
@@ -36,7 +36,7 @@ default_test_group:
 
 default_dashboard_tab:
   open_test_template:            # The URL template to visit after clicking on a cell
-    url: https://prow.knative.dev/view/gcs/<gcs_prefix>/<changelist>
+    url: [[.ProwHost]]/view/gcs/<gcs_prefix>/<changelist>
   file_bug_template:             # The URL template to visit when filing a bug
     url: https://github.com/knative/serving/issues/new
     options:
@@ -50,7 +50,7 @@ default_dashboard_tab:
   # Text to show in the about menu as a link to another view of the results
   results_text: See these results on Prow
   results_url_template:          # The URL template to visit after clicking
-    url: https://prow.knative.dev/job-history/<gcs_prefix>
+    url: [[.ProwHost]]/job-history/<gcs_prefix>
   # URL for regression search links.
   code_search_path: github.com/knative/serving/search
   num_columns_recent: 10
