--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -72,23 +72,19 @@ branch-protection:
 tide:
   queries:
   - repos:
-    - knative/build
-    - knative/build-templates
-    - knative/client
-    - knative/observability
-    - knative/serving
-    - knative/eventing
-    - knative/eventing-contrib
-    - knative/docs
-    - knative/test-infra
-    - knative/pkg
-    - knative/caching
-    - knative/website
-    - knative/community
-    - knative/sample-controller
-    - knative/serving-operator
-    - knative/eventing-operator
-    - google/knative-gcp
+    - "google/knative-gcp"
+    - "knative/caching"
+    - "knative/client"
+    - "knative/docs"
+    - "knative/eventing"
+    - "knative/eventing-contrib"
+    - "knative/eventing-operator"
+    - "knative/observability"
+    - "knative/pkg"
+    - "knative/sample-controller"
+    - "knative/serving"
+    - "knative/serving-operator"
+    - "knative/test-infra"
     labels:
     - lgtm
     - approved
