--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5784,12 +5784,7 @@ periodics:
         -label:lifecycle/rotten"
       - "--updated=2160h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Issues go stale after 90 days of inactivity.\n
-        Mark the issue as fresh by adding the comment `/remove-lifecycle stale`.\n
-        Stale issues rot after an additional 30 days of inactivity and eventually close.\n
-        If this issue is safe to close now please do so by adding the comment `/close`.\n\n
-        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n
-        /lifecycle stale"
+      - "--comment=Issues go stale after 90 days of inactivity.\nMark the issue as fresh by adding the comment `/remove-lifecycle stale`.\nStale issues rot after an additional 30 days of inactivity and eventually close.\nIf this issue is safe to close now please do so by adding the comment `/close`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/lifecycle stale"
       - "--template"
       - "--ceiling=10"
       - "--confirm"
@@ -5824,12 +5819,7 @@ periodics:
         -label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Stale issues rot after 30 days of inactivity.\n
-        Mark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\n
-        Rotten issues close after an additional 30 days of inactivity.\n
-        If this issue is safe to close now please do so by adding the comment `/close`.\n\n
-        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n
-        /lifecycle rotten"
+      - "--comment=Stale issues rot after 30 days of inactivity.\nMark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\nRotten issues close after an additional 30 days of inactivity.\nIf this issue is safe to close now please do so by adding the comment `/close`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/lifecycle rotten"
       - "--template"
       - "--ceiling=10"
       - "--confirm"
@@ -5864,11 +5854,7 @@ periodics:
         label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Rotten issues close after 30 days of inactivity.\n
-        Reopen the issue with `/reopen`.\n
-        Mark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\n\n
-        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n
-        /close"
+      - "--comment=Rotten issues close after 30 days of inactivity.\nReopen the issue with `/reopen`.\nMark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/close"
       - "--template"
       - "--ceiling=10"
       - "--confirm"
@@ -5903,12 +5889,7 @@ periodics:
         -label:lifecycle/rotten"
       - "--updated=2160h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Issues go stale after 90 days of inactivity.\n
-        Mark the issue as fresh by adding the comment `/remove-lifecycle stale`.\n
-        Stale issues rot after an additional 30 days of inactivity and eventually close.\n
-        If this issue is safe to close now please do so by adding the comment `/close`.\n\n
-        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n
-        /lifecycle stale"
+      - "--comment=Issues go stale after 90 days of inactivity.\nMark the issue as fresh by adding the comment `/remove-lifecycle stale`.\nStale issues rot after an additional 30 days of inactivity and eventually close.\nIf this issue is safe to close now please do so by adding the comment `/close`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/lifecycle stale"
       - "--template"
       - "--ceiling=10"
       - "--confirm"
@@ -5943,12 +5924,7 @@ periodics:
         -label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Stale issues rot after 30 days of inactivity.\n
-        Mark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\n
-        Rotten issues close after an additional 30 days of inactivity.\n
-        If this issue is safe to close now please do so by adding the comment `/close`.\n\n
-        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n
-        /lifecycle rotten"
+      - "--comment=Stale issues rot after 30 days of inactivity.\nMark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\nRotten issues close after an additional 30 days of inactivity.\nIf this issue is safe to close now please do so by adding the comment `/close`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/lifecycle rotten"
       - "--template"
       - "--ceiling=10"
       - "--confirm"
@@ -5983,11 +5959,7 @@ periodics:
         label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Rotten issues close after 30 days of inactivity.\n
-        Reopen the issue with `/reopen`.\n
-        Mark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\n\n
-        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n
-        /close"
+      - "--comment=Rotten issues close after 30 days of inactivity.\nReopen the issue with `/reopen`.\nMark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/close"
       - "--template"
       - "--ceiling=10"
       - "--confirm"
