--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -211,6 +211,7 @@ periodics:
       release: "0.7"
     - branch-ci: true
       release: "0.8"
+      dot-dev: true
     - custom-job: istio-1.2-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
       dot-dev: true
@@ -240,8 +241,9 @@ periodics:
         limits:
           memory: 16Gi
     - dot-release: true
+      # TODO(chaodaiG): dot-release will need to use go1.13 after branch
+      # release-0.10 is cut
       dot-dev: true
-      go113: true
       resources:
         requests:
           memory: 12Gi
