--- a/shared/Makefile.simple-image
+++ b/shared/Makefile.simple-image
@@ -24,11 +24,20 @@ PROJECT  ?= knative-tests
 IMG = $(REGISTRY)/$(PROJECT)/test-infra/$(IMAGE_NAME)
 TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --match '^$$')
 
+# build_helper: build the image with docker
+#	$1 = [optional] additional flags to be applied to the build
+define build_helper
+	docker build $(1) -t $(IMG):$(TAG) -f Dockerfile ../..
+endef
+
 all: build
 
 build:
-	docker build -t $(IMG):$(TAG) -f Dockerfile ../..
+	$(call build_helper)
 	docker tag $(IMG):$(TAG) $(IMG):latest
+
+build_no_cache:
+	$(call build_helper,--no-cache)
 
 push_versioned: build
 	docker push $(IMG):$(TAG)
