--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -398,9 +398,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -442,9 +443,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -490,9 +492,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -531,9 +534,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-upgrade-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -565,9 +569,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-upgrade-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -603,9 +608,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-upgrade-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -635,9 +641,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
         - "./test/e2e-smoke-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -669,9 +676,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
         - "./test/e2e-smoke-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -707,9 +715,10 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
         - "./test/e2e-smoke-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -875,6 +884,9 @@ presubmits:
         - runner.sh
         args:
         - "./test/performance-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -907,6 +919,9 @@ presubmits:
         - runner.sh
         args:
         - "./test/performance-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -943,6 +958,9 @@ presubmits:
         - runner.sh
         args:
         - "./test/performance-tests.sh"
+        - "--istio-version"
+        - "1.2-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
