--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -400,7 +400,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-tests.sh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -444,7 +444,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-tests.sh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -492,7 +492,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-tests.sh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -533,7 +533,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-upgrade-tests.sh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -567,7 +567,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-upgrade-tests.sh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -605,7 +605,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
+        - "./test/e2e-upgrade-tests.sh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
