--- a/pkg/perf-cluster-operation/testdir/test-benchmark3/cluster.yaml
+++ b/pkg/perf-cluster-operation/testdir/test-benchmark3/cluster.yaml
@@ -14,6 +14,6 @@
 
 # This is an example file for a partial cluster config of a benchmark.
 
-gke_cluster:
-  node_count: 1
+GKECluster:
+  nodeCount: 1
   addons: "istio"
