generate new config for prow and testgrid

--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -247,6 +247,12 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.8-continuous
 - name: ci-knative-eventing-contrib-0.8-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.8-continuous
+- name: ci-knative-serving-0.9-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.9-continuous
+- name: ci-knative-eventing-0.9-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.9-continuous
+- name: ci-knative-eventing-contrib-0.9-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.9-continuous
 - name: ci-google-knative-gcp-continuous
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-continuous
   alert_stale_results_hours: 3
@@ -501,6 +507,17 @@ dashboards:
     base_options: "sort-by-name="
   - name: eventing-contrib
     test_group_name: ci-knative-eventing-contrib-0.8-continuous
+    base_options: "sort-by-name="
+- name: knative-0.9
+  dashboard_tab:
+  - name: serving
+    test_group_name: ci-knative-serving-0.9-continuous
+    base_options: "sort-by-name="
+  - name: eventing
+    test_group_name: ci-knative-eventing-0.9-continuous
+    base_options: "sort-by-name="
+  - name: eventing-contrib
+    test_group_name: ci-knative-eventing-contrib-0.9-continuous
     base_options: "sort-by-name="
 dashboard_groups:
 - name: knative
