--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -219,6 +219,9 @@ periodics:
     - branch-ci: true
       release: "0.8"
       dot-dev: true
+    - branch-ci: true
+      release: "0.9"
+      dot-dev: true
     - custom-job: istio-1.2-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
       dot-dev: true
@@ -305,6 +308,9 @@ periodics:
       release: "0.7"
     - branch-ci: true
       release: "0.8"
+    - branch-ci: true
+      release: "0.9"
+      dot-dev: true
     - nightly: true
       dot-dev: true
     - dot-release: true
@@ -323,6 +329,9 @@ periodics:
       release: "0.7"
     - branch-ci: true
       release: "0.8"
+    - branch-ci: true
+      release: "0.9"
+      dot-dev: true
     - nightly: true
       dot-dev: true
     - dot-release: true
