--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -29,10 +29,10 @@ plank:
     grace_period: 15000000000 # 15s
     utility_images:
       # Update these versions when updating plank version in cluster.yaml
-      clonerefs: "gcr.io/k8s-prow/clonerefs:v20191009-0492f1d6e"
-      initupload: "gcr.io/k8s-prow/initupload:v20191009-0492f1d6e"
-      entrypoint: "gcr.io/k8s-prow/entrypoint:v20191009-0492f1d6e"
-      sidecar: "gcr.io/k8s-prow/sidecar:v20191009-0492f1d6e"
+      clonerefs: "gcr.io/k8s-prow/clonerefs:v20190925-d7e1d9b17"
+      initupload: "gcr.io/k8s-prow/initupload:v20190925-d7e1d9b17"
+      entrypoint: "gcr.io/k8s-prow/entrypoint:v20190925-d7e1d9b17"
+      sidecar: "gcr.io/k8s-prow/sidecar:v20190925-d7e1d9b17"
     gcs_configuration:
       bucket: "knative-prow"
       path_strategy: "explicit"
@@ -51,6 +51,19 @@ deck:
       "artifacts/junit.*\\.xml":
       - "junit"
     announcement: "The old job viewer, Gubernator, has been deprecated in favour of this page, Spyglass.{{if .ArtifactPath}} For now, the old page is <a href='https://gubernator.knative.dev/build/{{.ArtifactPath}}'>still available</a>.{{end}} Please send feedback to Knative productivity."
+    lenses:
+    - lens:
+        name: build-log
+        config:
+          highlight_regexes:
+          - 'panic: test timed out after'
+          - timed out
+          - 'ERROR:'
+          - (\s|^)(FAIL|Failure \[)\b
+          - (\s|^)panic\b
+          - ^E\d{4} \d\d:\d\d:\d\d\.\d\d\d]
+      required_files:
+      - build-log.txt
   tide_update_period: 1s
 prowjob_namespace: default
 pod_namespace: test-pods
