--- a/ci/prow/templates/prow_config_header.yaml
+++ b/ci/prow/templates/prow_config_header.yaml
@@ -59,7 +59,7 @@ deck:
         name: build-log
         config:
           highlight_regexes:
-          - 'panic: test timed out after'
+          - 'panic: test timed out after.*$'
           - timed out
           - 'ERROR:'
           - (\s|^)(FAIL|Failure \[)\b
